Documentation and file structure updates

--- a/.github/workflows/build-mem-check.yml
+++ b/.github/workflows/build-mem-check.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Build
         run: make
 
-      - name: Memory Leak Check
-        run: valgrind ./bin/runtime --leak-check=FULL
+      - name: Memory Leak Check (on basic example class)
+        run: valgrind ./bin/runtime -b examples/basic/main.class --leak-check=FULL
