--- a/.github/workflows/build-mem-check.yml
+++ b/.github/workflows/build-mem-check.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Build
         run: make
 
-      - name: Memory Leak Check (on basic example class)
-        run: valgrind ./bin/runtime -b examples/basic/main.class --leak-check=FULL
+      #      - name: Memory Leak Check (on basic example class)
+      #        run: valgrind ./bin/runtime -b examples/basic/main.class --leak-check=FULL
 
       - name: Parse/lex Memory Leak Check (new feature toggle)
         run: valgrind ./bin/runtime -l examples/lang/test.rvm --leak-check=FULL
