--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,23 +46,12 @@ jobs:
             tar -czvf "dist/rvm-${{ env.VERSION }}-${{ matrix.platform }}.tar.gz" ./bin/*
           fi
 
-      - name: Check if tag already exists
-        id: check_tag
-        run: |
-          git fetch --tags
-          if git rev-parse v${{ env.VERSION }} >/dev/null 2>&1; then
-            echo "::set-output name=exists::true"
-            exit 0
-          else
-            echo "::set-output name=exists::false"
-          fi
-
       - name: Create Git tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git tag -a v${{ env.VERSION }} -m "Release v${{ env.VERSION }}"
-          git push origin v${{ env.VERSION }}
+          git push origin v${{ env.VERSION }} || true
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
