Windows release version tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,19 @@ jobs:
           install: mingw-w64-x86_64-toolchain make
           update: true
 
-      - name: Extract intermediate language version number
+      - name: Extract intermediate language version number (Windows)
+        if: matrix.platform == 'windows-latest'
+        shell: pwsh
+        run: |
+          $MAJOR_VERSION = Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MAJOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
+          $MINOR_VERSION = Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MINOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
+          Write-Host "VERSION=$MAJOR_VERSION.$MINOR_VERSION" >> $env:GITHUB_ENV
+          Write-Host "Version: $MAJOR_VERSION.$MINOR_VERSION"
+
+      - name: Extract intermediate language version number (Unix)
         id: get_version
+        if: matrix.platform != 'windows-latest'
+        shell: bash
         run: |
           MAJOR_VERSION=$(grep '#define IL_MAJOR_VERSION' ./src/common_properties.h | awk '{print $3}')
           MINOR_VERSION=$(grep '#define IL_MINOR_VERSION' ./src/common_properties.h | awk '{print $3}')
@@ -43,7 +54,7 @@ jobs:
           if [ "${{ matrix.platform }}" == "windows-latest" ]; then
             zip -r "dist/rvm-${{ env.VERSION }}-windows.zip" ./bin/*
           else
-            tar -czvf "dist/rvm-${{ env.VERSION }}-${{ matrix.platform }}.tar.gz" ./bin/*
+            tar -czvf "dist/rvm-${{ env.VERSION }}-${{ matrix.platform }}=${{ matrix.arch }}.tar.gz" ./bin/*
           fi
 
       - name: Create Git tag
