--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,8 @@ jobs:
         run: |
           $MAJOR_VERSION = Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MAJOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
           $MINOR_VERSION = Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MINOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
-          $VERSION = "$MAJOR_VERSION.$MINOR_VERSION"
-          "$VERSION" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Host "Version: $VERSION"
+          echo (VERSION = "$MAJOR_VERSION.$MINOR_VERSION") >> $env:GITHUB_ENV
+          Write-Host "Version: $env:VERSION"
 
       - name: Extract intermediate language version number (Unix)
         id: get_version
