--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup MSYS2
         if: matrix.platform == 'windows-latest'
@@ -68,11 +68,11 @@ jobs:
           git push origin v${{ env.VERSION }} || true
 
       - name: Create Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: v${{ env.VERSION }}
-          name: Release v${{ env.VERSION }}
+          release_name: Release v${{ env.VERSION }}
           files: |
             dist/*
           body: |
