--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,13 @@ jobs:
         if: matrix.platform == 'windows-latest'
         shell: pwsh
         run: |
-          $MAJOR_VERSION=Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MAJOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
-          $MINOR_VERSION=Get-Content -Path ./src/common_properties.h | Select-String -Pattern '#define IL_MINOR_VERSION' | ForEach-Object { $_ -split ' ' } | Select-Object -Index 2
-          $VERSION=$MAJOR_VERSION.$MINOR_VERSION
-          echo "VERSION=$VERSION" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          # Get the major and minor versions from the header file
+          $majorVersion = (Get-Content ./src/common_properties.h | Select-String '#define IL_MAJOR_VERSION' -SimpleMatch).Matches[0].Groups[3].Value
+          $minorVersion = (Get-Content ./src/common_properties.h | Select-String '#define IL_MINOR_VERSION' -SimpleMatch).Matches[0].Groups[3].Value
+          # Set the environment variable
+          Write-Host "VERSION=$majorVersion.$minorVersion" >> $env:GITHUB_ENV
+          # Output the version
+          Write-Host "Version: $majorVersion.$minorVersion"
 
       - name: Extract intermediate language version number (Unix)
         id: get_version
